# internal/domains/user/persistence/sqlc/generated/models.go
@@ -13,6 +13,79 @@ import (
 	"github.com/google/uuid"
 )
 
+type DayEnum string
+
+const (
+	DayEnumMONDAY    DayEnum = "MONDAY"
+	DayEnumTUESDAY   DayEnum = "TUESDAY"
+	DayEnumWEDNESDAY DayEnum = "WEDNESDAY"
+	DayEnumTHURSDAY  DayEnum = "THURSDAY"
+	DayEnumFRIDAY    DayEnum = "FRIDAY"
+	DayEnumSATURDAY  DayEnum = "SATURDAY"
+	DayEnumSUNDAY    DayEnum = "SUNDAY"
+)
+
+func (e *DayEnum) Scan(src interface{}) error {
+	switch s := src.(type) {
+	case []byte:
+		*e = DayEnum(s)
+	case string:
+		*e = DayEnum(s)
+	default:
+		return fmt.Errorf("unsupported scan type for DayEnum: %T", src)
+	}
+	return nil
+}
+
+type NullDayEnum struct {
+	DayEnum DayEnum `json:"day_enum"`
+	Valid   bool    `json:"valid"` // Valid is true if DayEnum is not NULL
+}
+
+// Scan implements the Scanner interface.
+func (ns *NullDayEnum) Scan(value interface{}) error {
+	if value == nil {
+		ns.DayEnum, ns.Valid = "", false
+		return nil
+	}
+	ns.Valid = true
+	return ns.DayEnum.Scan(value)
+}
+
+// Value implements the driver Valuer interface.
+func (ns NullDayEnum) Value() (driver.Value, error) {
+	if !ns.Valid {
+		return nil, nil
+	}
+	return string(ns.DayEnum), nil
+}
+
+func (e DayEnum) Valid() bool {
+	switch e {
+	case DayEnumMONDAY,
+		DayEnumTUESDAY,
+		DayEnumWEDNESDAY,
+		DayEnumTHURSDAY,
+		DayEnumFRIDAY,
+		DayEnumSATURDAY,
+		DayEnumSUNDAY:
+		return true
+	}
+	return false
+}
+
+func AllDayEnumValues() []DayEnum {
+	return []DayEnum{
+		DayEnumMONDAY,
+		DayEnumTUESDAY,
+		DayEnumWEDNESDAY,
+		DayEnumTHURSDAY,
+		DayEnumFRIDAY,
+		DayEnumSATURDAY,
+		DayEnumSUNDAY,
+	}
+}
+
 type MembershipStatus string
 
 const (
@@ -220,8 +293,8 @@ type CourseCourse struct {
 	Name        string         `json:"name"`
 	Description sql.NullString `json:"description"`
 	Capacity    int32          `json:"capacity"`
-	CreatedAt   sql.NullTime   `json:"created_at"`
-	UpdatedAt   sql.NullTime   `json:"updated_at"`
+	CreatedAt   time.Time      `json:"created_at"`
+	UpdatedAt   time.Time      `json:"updated_at"`
 }
 
 type CourseMembership struct {
@@ -232,18 +305,18 @@ type CourseMembership struct {
 }
 
 type CustomerDiscountUsage struct {
-	CustomerID uuid.UUID    `json:"customer_id"`
-	DiscountID uuid.UUID    `json:"discount_id"`
-	UsageCount int32        `json:"usage_count"`
-	LastUsedAt sql.NullTime `json:"last_used_at"`
+	CustomerID uuid.UUID `json:"customer_id"`
+	DiscountID uuid.UUID `json:"discount_id"`
+	UsageCount int32     `json:"usage_count"`
+	LastUsedAt time.Time `json:"last_used_at"`
 }
 
 type CustomerEnrollment struct {
 	ID          uuid.UUID    `json:"id"`
 	CustomerID  uuid.UUID    `json:"customer_id"`
 	EventID     uuid.UUID    `json:"event_id"`
-	CreatedAt   sql.NullTime `json:"created_at"`
-	UpdatedAt   sql.NullTime `json:"updated_at"`
+	CreatedAt   time.Time    `json:"created_at"`
+	UpdatedAt   time.Time    `json:"updated_at"`
 	CheckedInAt sql.NullTime `json:"checked_in_at"`
 	IsCancelled bool         `json:"is_cancelled"`
 }
@@ -252,11 +325,11 @@ type CustomerMembershipPlan struct {
 	ID               uuid.UUID        `json:"id"`
 	CustomerID       uuid.UUID        `json:"customer_id"`
 	MembershipPlanID uuid.UUID        `json:"membership_plan_id"`
-	StartDate        sql.NullTime     `json:"start_date"`
+	StartDate        time.Time        `json:"start_date"`
 	RenewalDate      sql.NullTime     `json:"renewal_date"`
 	Status           MembershipStatus `json:"status"`
-	CreatedAt        sql.NullTime     `json:"created_at"`
-	UpdatedAt        sql.NullTime     `json:"updated_at"`
+	CreatedAt        time.Time        `json:"created_at"`
+	UpdatedAt        time.Time        `json:"updated_at"`
 }
 
 type Discount struct {
@@ -269,26 +342,29 @@ type Discount struct {
 	IsActive        bool           `json:"is_active"`
 	ValidFrom       time.Time      `json:"valid_from"`
 	ValidTo         sql.NullTime   `json:"valid_to"`
-	CreatedAt       sql.NullTime   `json:"created_at"`
-	UpdatedAt       sql.NullTime   `json:"updated_at"`
+	CreatedAt       time.Time      `json:"created_at"`
+	UpdatedAt       time.Time      `json:"updated_at"`
 }
 
 type DiscountRestrictedMembershipPlan struct {
-	DiscountID       uuid.UUID    `json:"discount_id"`
-	MembershipPlanID uuid.UUID    `json:"membership_plan_id"`
-	CreatedAt        sql.NullTime `json:"created_at"`
+	DiscountID       uuid.UUID `json:"discount_id"`
+	MembershipPlanID uuid.UUID `json:"membership_plan_id"`
+	CreatedAt        time.Time `json:"created_at"`
 }
 
 type Event struct {
-	ID            uuid.UUID     `json:"id"`
-	BeginDateTime time.Time     `json:"begin_date_time"`
-	EndDateTime   time.Time     `json:"end_date_time"`
-	PracticeID    uuid.NullUUID `json:"practice_id"`
-	CourseID      uuid.NullUUID `json:"course_id"`
-	GameID        uuid.NullUUID `json:"game_id"`
-	LocationID    uuid.UUID     `json:"location_id"`
-	CreatedAt     sql.NullTime  `json:"created_at"`
-	UpdatedAt     sql.NullTime  `json:"updated_at"`
+	ID               uuid.UUID     `json:"id"`
+	EventStartAt     time.Time     `json:"event_start_at"`
+	EventEndAt       time.Time     `json:"event_end_at"`
+	SessionStartTime interface{}   `json:"session_start_time"`
+	SessionEndTime   interface{}   `json:"session_end_time"`
+	Day              DayEnum       `json:"day"`
+	PracticeID       uuid.NullUUID `json:"practice_id"`
+	CourseID         uuid.NullUUID `json:"course_id"`
+	GameID           uuid.NullUUID `json:"game_id"`
+	LocationID       uuid.UUID     `json:"location_id"`
+	CreatedAt        time.Time     `json:"created_at"`
+	UpdatedAt        time.Time     `json:"updated_at"`
 }
 
 type EventStaff struct {
@@ -348,8 +424,6 @@ type Practice struct {
 	Level                          PracticeLevel  `json:"level"`
 	ShouldEmailBookingNotification sql.NullBool   `json:"should_email_booking_notification"`
 	Capacity                       int32          `json:"capacity"`
-	StartDate                      time.Time      `json:"start_date"`
-	EndDate                        sql.NullTime   `json:"end_date"`
 	CreatedAt                      time.Time      `json:"created_at"`
 	UpdatedAt                      time.Time      `json:"updated_at"`
 }
@@ -367,14 +441,17 @@ type UsersCustomerCredit struct {
 }
 
 type UsersPendingUser struct {
-	ID              uuid.UUID      `json:"id"`
-	FirstName       string         `json:"first_name"`
-	LastName        string         `json:"last_name"`
-	Email           sql.NullString `json:"email"`
-	ParentHubspotID sql.NullString `json:"parent_hubspot_id"`
-	Age             int32          `json:"age"`
-	CreatedAt       sql.NullTime   `json:"created_at"`
-	UpdatedAt       sql.NullTime   `json:"updated_at"`
+	ID                       uuid.UUID      `json:"id"`
+	FirstName                string         `json:"first_name"`
+	LastName                 string         `json:"last_name"`
+	Email                    sql.NullString `json:"email"`
+	ParentHubspotID          sql.NullString `json:"parent_hubspot_id"`
+	Age                      int32          `json:"age"`
+	CreatedAt                sql.NullTime   `json:"created_at"`
+	UpdatedAt                sql.NullTime   `json:"updated_at"`
+	Phone                    sql.NullString `json:"phone"`
+	HasMarketingEmailConsent bool           `json:"has_marketing_email_consent"`
+	HasSmsConsent            bool           `json:"has_sms_consent"`
 }
 
 type UsersStaff struct {
@@ -386,10 +463,10 @@ type UsersStaff struct {
 }
 
 type UsersStaffActivityLog struct {
-	ID         uuid.UUID    `json:"id"`
-	UserID     uuid.UUID    `json:"user_id"`
-	Activity   string       `json:"activity"`
-	OccurredAt sql.NullTime `json:"occurred_at"`
+	ID         uuid.UUID `json:"id"`
+	UserID     uuid.UUID `json:"user_id"`
+	Activity   string    `json:"activity"`
+	OccurredAt time.Time `json:"occurred_at"`
 }
 
 type UsersStaffRole struct {
@@ -419,10 +496,11 @@ type WaiverPendingUsersWaiverSigning struct {
 }
 
 type WaiverWaiver struct {
-	ID        uuid.UUID `json:"id"`
-	WaiverUrl string    `json:"waiver_url"`
-	CreatedAt time.Time `json:"created_at"`
-	UpdatedAt time.Time `json:"updated_at"`
+	ID         uuid.UUID `json:"id"`
+	WaiverUrl  string    `json:"waiver_url"`
+	CreatedAt  time.Time `json:"created_at"`
+	UpdatedAt  time.Time `json:"updated_at"`
+	WaiverName string    `json:"waiver_name"`
 }
 
 type WaiverWaiverSigning struct {
